syntax = "proto3";

package securecommunication;
option go_package = "gitlab.sliit.lk/r24-055/r24-055/kyber-auth";

message KeyExchangeRequest {
  bytes public_key = 1;
  bytes kem = 2;
}

message KeyExchangeResponse {
  bytes encrypted_shared_secret = 1;
}

message RegisterRequest {
	bytes public_key = 1;
	string username = 2;
	string email = 3;
}

message RegisterResponse {
	bool success = 1;
}

service KeyExchangeService {
	rpc KeyExchange(KeyExchangeRequest) returns (KeyExchangeResponse);
}

service RegisterService {
	rpc Register(RegisterRequest) returns (RegisterResponse);
}
